fix poll alert on mobile

--- a/intranet/static/css/responsive.core.scss
+++ b/intranet/static/css/responsive.core.scss
@@ -144,14 +144,14 @@ body.disable-scroll {
                 padding: 20px 0;
                 margin: 0;
                 height: 18px;
-                //color: white;
-                > i {
-                    /*
+                .nav-alert-container {
                     display: inline-block;
                     float: left;
-                    margin-left: 20px;
-                    margin-top: -5px;
-                    */
+                    i.fa-exclamation-circle {
+                        right: -2px;
+                    }
+                }
+                i {
                     display: inline-block;
                     float: left;
                     margin-left: 16.6px;
